Launchpad automatic translations update.

--- a/po/it.po
+++ b/po/it.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-09-11 10:37+0200\n"
-"PO-Revision-Date: 2012-11-23 12:32+0000\n"
+"PO-Revision-Date: 2012-11-27 11:08+0000\n"
 "Last-Translator: Luca Falavigna <dktrkranz@ubuntu.com>\n"
 "Language-Team: Italian <it@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2012-11-24 06:56+0000\n"
-"X-Generator: Launchpad (build 16293)\n"
+"X-Launchpad-Export-Date: 2012-11-28 04:42+0000\n"
+"X-Generator: Launchpad (build 16309)\n"
 
 #: GTG/plugins/export/export_templates/description_pocketmod.py:18
 msgid "Foldable booklet (PDF)"
@@ -356,6 +356,84 @@ msgid ""
 "\n"
 "The GTG team."
 msgstr ""
+"Grazie per aver scelto Getting Things GNOME!, il tuo gestore di attività! "
+"Tutto in Getting Things GNOME! (GTG) è un'attività. Dal costruire un ponte "
+"sull'Oceano Pacifico al cambiare una lampadina, o all'organizzare una "
+"festa!\n"
+"\n"
+"Se non hai mai utilizzato GTG, puoi prenderti un po' di tempo per leggere "
+"queste indicazioni, ti forniranno informazioni utili su come utilizzare GTG "
+"per organizzare le attività di tutti i giorni.\n"
+"\n"
+"Creazione e modifica delle attività:\n"
+"\n"
+"Utilizzare GTG è facile: puoi organizzare ciò che devi fare creando delle "
+"nuove attività. Per fare ciò è sufficiente premere il tasto &quot;Nuova "
+"Attività&quot;, aggiungere una descrizione, impostare qualche parametro, e "
+"il gioco è fatto! Quando un'attività è stata completata puoi chiuderla "
+"premendo il tasto &quot;Marca come Completata&quot;\n"
+"\n"
+"In GTG un'attività viene salvata automaticamente durante la modifica. Non è "
+"necessario premere alcun tasto &quot;Salva&quot;! Provalo tu stesso: "
+"aggiungi del testo ad un'attività, chiudi la relativa finestra e riaprila. "
+"Le tue modifiche sono ancora presenti!\n"
+"\n"
+"Subattività:\n"
+"\n"
+"Di solito è più facile completare attività suddividendole in attività più "
+"semplici. GTG ti permette di fare questo definendo delle "
+"&quot;subattività&quot;. GTG considera queste subattività come prerequisiti "
+"che devono essere completati prima che si possa procedere al completamento "
+"dell'attività principale.\n"
+"\n"
+"In GTG, un'attività può ricomprendere svariate subattività. Esse appaiono "
+"come collegamenti nella descrizione dell'attività principale, analogamente "
+"al link sottostante. Per apreire e modificare una subattività basta "
+"semplicemente cliccare sul relativo link! Provalo tu stesso, apri la "
+"seguente subattività:\n"
+"<subtask>1@1</subtask>\n"
+"\n"
+"Chiudere un'attività:\n"
+"\n"
+"Non appena un'attività è terminata, puoi chiuderla sia premendo il tasto "
+"&quot;Marca come Completata&quot; sia premendo il tasto &quot;Scarta&quot;. "
+"Usa il primo tasto se l'attività è stata completata, il secondo se invece è "
+"necessario chiudere l'attività in quanto non più rilevante. Vuoi provare "
+"questo meccanismo? Prova a chiudere le subattività di seguito elencate!\n"
+"\n"
+"Quando si chiude un'attività, anche tutte le relative subattività saranno "
+"chiuse automaticamente! GTG considera che, se hai completato una data "
+"attività, non è più necessario completare le subattività (in fin dei conti "
+"erano dei prerequisiti).\n"
+"\n"
+"Le attività che hai marcato come completate o scartate sono elencate nel "
+"&quot;Pannello Attività Chiuse&quot;, solitamente nascosto come scelta "
+"predefinita, ma che puoi facilmente mostrare utilizzando il Menu "
+"Visualizza.\n"
+"\n"
+"Maggiori informazioni su GTG:\n"
+"\n"
+"Se sei interessato a conoscere meglio le altre funzionalità di GTG, troverai "
+"maggiori informazioni qui:\n"
+"<subtask>2@1</subtask>\n"
+"<subtask>3@1</subtask>\n"
+"<subtask>4@1</subtask>\n"
+"<subtask>5@1</subtask>\n"
+"<subtask>6@1</subtask>\n"
+"<subtask>7@1</subtask>\n"
+"<subtask>8@1</subtask>\n"
+"\n"
+"Inoltre, è possibile leggere la documentazione di GTG premendo il tasto F1 o "
+"aprendo il Menu Aiuto.\n"
+"\n"
+"Ci auguriamo che sarai soddisfatto nell'usare GTG, e ti ringraziamo per "
+"averlo provato! Sentiti libero di inviare segnalazioni di problemi o idee "
+"per migliorare il software utilizzando questa pagina Web: "
+"https://bugs.launchpad.net/gtg/+filebug. Se vuoi ricevere consigli sull'uso "
+"di GTG o essere informato sulle nuove funzionalità, visita il nostro blog "
+"all'indirizzo http://gtg.fritalk.com\n"
+"\n"
+"Il Team di GTG."
 
 #: GTG/core/firstrun_tasks.py:114
 msgid "Learn How To Use Subtasks"
@@ -386,6 +464,34 @@ msgid ""
 "can always change it by drag-and-dropping tasks on each other in the tasks "
 "list."
 msgstr ""
+"Una &quot;Subattività&quot; è qualcosa che deve essere completato prima di "
+"essere in grado di completare l'attività principale. Lo scopo delle "
+"subattività è di spezzare un'attività in tante subattività più semplici da "
+"realizzare e monitorare.\n"
+"\n"
+"Per inserire una subattività nella descrizione dell'attività (come in questa "
+"finestra), digita &quot;-&quot; all'inizio di una linea vuota, poi digita il "
+"titolo della subattività e premi Invio.\n"
+"\n"
+"Prova ad inserire una subattività qui sotto. Digita &quot;- Questa è la mia "
+"prima subattività!&quot;, e premi Invio:\n"
+"\n"
+"\n"
+"\n"
+"In alternativa, puoi utilizzare il pulsante &quot;Inserisci "
+"Subattività&quot;.\n"
+"\n"
+"Le subattività seguono alcune regole ben precise: in primo luogo, la data di "
+"scadenza di una subattività non può mai essere posteriore a quella "
+"dell'attività a cui si riferisce; in secondo luogo, quando marchi "
+"un'attività come completata, le sue subattività saranno marcate come tali.\n"
+"Note that subtasks obey to some rules: first, a subtask's due date can never "
+"happen after its parent's due date and, second, when you mark a parent task "
+"as done, its subtasks will also be marked as done.\n"
+"\n"
+"Se non sei soddisfatto dell'organizzazione in attività e subattività, puoi "
+"sempre cambiare la struttura trascinando le attività su altre attività in "
+"elenco."
 
 #: GTG/core/firstrun_tasks.py:142
 msgid "Learn How To Use Tags"
@@ -423,7 +529,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:174
 msgid "Learn How To Use The Work View"
-msgstr ""
+msgstr "Utilizzo della Scaletta di lavoro"
 
 #: GTG/core/firstrun_tasks.py:175
 msgid ""
@@ -587,6 +693,25 @@ msgid ""
 "about them by in the dedicated documentation in GTG's help (use the Help "
 "menu or press F1 to get access to it)."
 msgstr ""
+"I servizi di sincronizzazione permettono a GTG di sincronizzare (cioè avere "
+"accesso o importare) attività, appunti o segnalazioni da altri siti e "
+"servizi come Launchpad, Remember The Milk, Tomboy, e così via.\n"
+"\n"
+"Questa funzionalità è molto utile se, per esempio, si ha la necessità di "
+"accedere alle attività di GTG sparse su differenti computer, o se si "
+"desidera modificare le attività per mezzo di un servizio online. GTG può "
+"inoltre importare le attività da siti specifici come Launchpad, il che "
+"permette per esempio di gestire le segnalazioni di problemi a cui stai "
+"lavorando!\n"
+"\n"
+"Per utilizzare i servizi di sincronizzazione, aprire il menu Modifica e "
+"selezionare &quot;Servizi di Sincronizzazione&quot;. E' quindi possibile "
+"scegliere tra diversi servizi online o residenti sul proprio computer da cui "
+"importare o esportare le proprie attività.\n"
+"\n"
+"Per maggiori informazioni sui servizi di sincronizzazione, è possibile "
+"leggere la relativa documentazione nel manuale di GTG (disponibile nel menu "
+"Aiuto o premendo il tasto F1)."
 
 #: GTG/core/firstrun_tasks.py:311
 msgid "Learn How To Search For Tasks"
