--- a/po/es.po
+++ b/po/es.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-09-11 10:37+0200\n"
-"PO-Revision-Date: 2012-11-23 00:10+0000\n"
+"PO-Revision-Date: 2012-11-27 16:22+0000\n"
 "Last-Translator: Christopher <Unknown>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2012-11-24 06:56+0000\n"
-"X-Generator: Launchpad (build 16293)\n"
+"X-Launchpad-Export-Date: 2012-11-28 04:42+0000\n"
+"X-Generator: Launchpad (build 16309)\n"
 
 #: GTG/plugins/export/export_templates/description_pocketmod.py:18
 msgid "Foldable booklet (PDF)"
@@ -473,6 +473,16 @@ msgid ""
 "You can find the Plugin Manager by selecting Edit in the Menu Bar, then "
 "clicking Plugins."
 msgstr ""
+"GTG tiene la posibilidad de añadir plugins para extender su funcionalidad "
+"básica.\n"
+"\n"
+"Algunos ejemplos de los plugins disponibles en la actualidad son el icono de "
+"notificación, que muestra un atajo útil para GTG en su espacio de "
+"notificación, o el removedor de tareas completadas que elimina "
+"automáticamente las tareas antiguas de tu lista de tareas cerrada.\n"
+"\n"
+"Se puede acceder al administrador de complementos seleccionando Editar en la "
+"barra de menú y, a continuación, en Complementos."
 
 #: GTG/core/firstrun_tasks.py:224
 msgid "Reporting Bugs"
@@ -492,6 +502,17 @@ msgid ""
 "If you have some trouble with GTG, we might be able to help you or to solve "
 "your problem really quickly."
 msgstr ""
+"GTG aún es software beta. Nos gusta y lo utilizamos todos los días, pero "
+"probablemente se encontrará con algunos errores al usarlo.\n"
+"\n"
+"Por favor, ayúdenos a mejorar GTG informando de ellos en nuestra página de "
+"Launchpad: https://bugs.launchpad.net/gtg/+filebug\n"
+"\n"
+"Te necesitamos para hacer de este software mejor. Cualquier idea y aporte es "
+"bienvenido!\n"
+"\n"
+"Si usted tiene algún problema con GTG, podríamos ser capaces de ayudarle o "
+"para resolver su problema realmente rápido."
 
 #: GTG/core/firstrun_tasks.py:241
 msgid "Learn How To Use The Quick Add Entry"
@@ -705,6 +726,10 @@ msgid ""
 "tag it with the tag you have chosen (you'll configure it later), and it will "
 "appear in GTG."
 msgstr ""
+"Este servicio puede sincronizar todas o parte de sus notas de Gnote en GTG. "
+"Si usted decide que sería útil tener una de sus notas en la lista de tareas "
+"pendientes, simplemente etiquetar con la etiqueta que ha elegido (tendrás "
+"que configurarlo más tarde), y aparecerá en GTG."
 
 #: GTG/backends/backend_launchpad.py:53
 msgid "Launchpad"
@@ -790,6 +815,10 @@ msgid ""
 "your TODO list, just tag it with the tag you have chosen (you'll configure "
 "it later), and it will appear in GTG."
 msgstr ""
+"Este servicio puede sincronizar todas o parte de sus notas de Tomboy en GTG. "
+"Si usted decide que sería útil tener una de sus notas en la lista de tareas "
+"pendientes, simplemente etiquetar con la etiqueta que ha elegido (tendrás "
+"que configurarlo más tarde), y aparecerá en GTG."
 
 #: GTG/backends/backend_mantis.py:42
 msgid "MantisBT"
@@ -1369,6 +1398,8 @@ msgid ""
 "Hint: you can add several tags by separating them with\n"
 "space. Place '!' before tags you want to remove."
 msgstr ""
+"Sugerencia: puedes añadir varias etiquetas separándolas con\n"
+"espacio. Insertar '!' antes de las etiquetas que desea eliminar."
 
 #: GTG/gtk/browser/modifytags_dialog.glade.h:8
 msgid "Apply to subtasks"
@@ -1406,6 +1437,9 @@ msgid ""
 "authentication data and has been disabled. To retry the login, re-enable the "
 "service."
 msgstr ""
+"El servicio de sincronización <b>% s </ b> no puede acceder con los datos de "
+"autenticación suministrados y se ha desactivado. Para volver a intentar el "
+"inicio de sesión, vuelva a habilitar el servicio."
 
 #: GTG/gtk/browser/custominfobar.py:40
 #, python-format
@@ -1586,6 +1620,19 @@ msgid ""
 "Getting Things GNOME!; if not, write to the Free Software Foundation, Inc., "
 "51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA."
 msgstr ""
+"Getting Things GNOME! es software libre, puede redistribuirlo y/o "
+"modificarlo bajo los términos de la Licencia Pública General de GNU según es "
+"publicada por la Free Software Foundation, con la versión 3 de la Licencia o "
+"cualquier versión posterior (a su elección).\n"
+"\n"
+"Getting Things GNOME! se distribuye con la esperanza de que sea útil, pero "
+"SIN NINGUNA GARANTÍA, incluso sin la garantía implícita de COMERCIALIZACIÓN "
+"o IDONEIDAD PARA UN PROPÓSITO PARTICULAR. Vea la Licencia Pública General de "
+"GNU para más detalles.\n"
+"\n"
+"Debería haber recibido una copia de la Licencia Pública General GNU junto "
+"con Getting Things GNOME; ¡si no, escriba a la Free Software Foundation, "
+"Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, EE.UU.."
 
 #: GTG/gtk/browser/taskbrowser.glade.h:40
 msgid "Mark as Not Done"
