Launchpad automatic translations update.

--- a/po/it.po
+++ b/po/it.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-09-11 10:37+0200\n"
-"PO-Revision-Date: 2012-11-27 11:08+0000\n"
+"PO-Revision-Date: 2012-11-30 15:15+0000\n"
 "Last-Translator: Luca Falavigna <dktrkranz@ubuntu.com>\n"
 "Language-Team: Italian <it@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2012-11-28 04:42+0000\n"
-"X-Generator: Launchpad (build 16309)\n"
+"X-Launchpad-Export-Date: 2012-12-01 05:16+0000\n"
+"X-Generator: Launchpad (build 16319)\n"
 
 #: GTG/plugins/export/export_templates/description_pocketmod.py:18
 msgid "Foldable booklet (PDF)"
@@ -526,6 +526,33 @@ msgid ""
 "@to_pay on @money, every task tagged with @to_pay will also appear when you "
 "select @money."
 msgstr ""
+"Si utilizzano le etichette per identificare le attività. Un'etichetta è "
+"semplicemente una parola che comincia per &quot;@&quot;.\n"
+"\n"
+"Prova a digitare una parola che comincia con &quot;@&quot; qui di seguito:\n"
+"\n"
+"Quando la parola si colorerà di giallo, sarà diventata un'etichetta! E "
+"l'etichetta è ora collegata all'attività!\n"
+"\n"
+"E' possibile visualizzare una barra laterale che mostra le etichette in uso "
+"per mezzo del menu Visualizza. In questo modo è possibile vedere con "
+"facilità tutte le attività associate ad una data etichetta.\n"
+"E' possibile modificare un'etichetta facendo click con il tasto destro su di "
+"essa nella barra laterale. E' per esempio possibile assegnarle un colore o "
+"un'icona. Questa funzionalità è piuttosto utile se si vuole identificare "
+"velocemente le attività associate ad una data etichetta!\n"
+"\n"
+"Le nuove etichette sono sempre aggiunte solo all'attività corrente, e mai "
+"alle sue attività ausiliarie. In ogni modo, creando una nuova attività "
+"ausiliaria, erediterà le etichette dell'attività principale.\n"
+"\n"
+"In caso fosse necessario avere una organizzazione delle attività più "
+"avanzata, è possibile creare una gerarchia di etichette trascinando "
+"un'etichetta su di un'altra. Questa funzionalità è utile se si vuole "
+"raggruppare insieme diverse etichette e mostrare con facilità le attività "
+"correlate. Per esempio, avendo due etichette @soldi e @da_pagare, e "
+"trascinando @da_pagare su @soldi, ogni attività etichettata con @da_pagare "
+"apparirà anche selezionando @soldi."
 
 #: GTG/core/firstrun_tasks.py:174
 msgid "Learn How To Use The Work View"
@@ -563,6 +590,40 @@ msgid ""
 "subtask, adding a tag hidden in the Work View, etc.). To avoid this, it's "
 "better not to edit your task while using the Work View."
 msgstr ""
+"Premendo il tasto &quot;Scaletta di lavoro&quot;, solo le attività "
+"immediatamente disponibili saranno mostrate nella lista.\n"
+"\n"
+"Cosa significa un attività immediatamente disponibile? E' un'attività che "
+"può essere svolta direttamente, proprio ora.\n"
+"\n"
+"E' un attività che è già &quot;avviabile&quot; e la cui data di avvio è già "
+"superata.\n"
+"\n"
+"E' un'attività che non ha attività ausiliarie pendenti e può essere "
+"completata direttamente.\n"
+"\n"
+"E' un'attività la cui data di scadenza è diversa da &quot;Prima o poi&quot;, "
+"dato che questo tipo di data è riservato ad attività che richiedono più "
+"tempo prima di essere avviate.\n"
+"\n"
+"Riassumendo, la Scaletta di lavoro mostra le attività che è possibile "
+"svolgere immediatamente. E' molto utile quando si vuole portare a termine "
+"qualcosa e concentrarsi sulle attività più significative!\n"
+"\n"
+"Se si utilizzano le etichette, è possibile cliccare su una di esse nella "
+"barra laterale e scegliere di nascondere le attivtità assegnate a quella "
+"particolare etichetta nella Scaletta di lavoro. E' molto utile per esempio "
+"quando si ha un tag &quot;@attesa&quot; usato per attività bloccate in "
+"attesa di un evento esterno (per esempio una telefonata che si è in attesa "
+"di ricevere).\n"
+"\n"
+"Un'altra osservazione importante riguardo alla Scaletta di lavoro: dato che "
+"la Scaletta di lavoro è aggiornata in tempo reale, modificando un'attività "
+"mentre si utilizza la Scaletta di lavoro, l'attività potrebbe sparire a "
+"causa delle modifiche appena apportate (aggiunta di un'attività ausiliaria, "
+"aggiunta di un'etichetta nascosta nella Scaletta di lavoro, e così via). Per "
+"evitare ciò, è meglio evitare di modificare le attività mentre si visualizza "
+"la Scaletta di lavoro."
 
 #: GTG/core/firstrun_tasks.py:209
 msgid "Learn How To Use Plugins"
@@ -667,6 +728,50 @@ msgid ""
 "mum&quot;, under the tags &quot;family&quot; and &quot;calls&quot;, with the "
 "due date next Sunday and the start date tomorrow."
 msgstr ""
+"L'Inserimento rapido è il modo più veloce per creare una nuova attività. "
+"Utilizzare l'opportuna voce nel menu Visualizza per abilitare o disabilitare "
+"il campo.\n"
+"\n"
+"Per aggiungere un'attività è sufficiente digitarne il titpolo nella relativa "
+"barra e premere Invio. L'attivià sarà create e selezionata nell'elenco delle "
+"attività. Se è stata selezionata un'etichetta nella barra laterale, sarà "
+"applicata all'attività appena creata.\n"
+"\n"
+"E' inoltre possibile creare un'attività per mezzo dell'Inserimento veloce e "
+"allo stesso tempo indicare etichette, data di scadenza e di rinvio. Per fare "
+"ciò, seguire queste regole:\n"
+"\n"
+"tags:etichetta1,etichetta2,etichetta3\n"
+"\n"
+"Usando questo metodo è possibile applicare quante etichette si desidera "
+"utilizzando la virgola come separatore. Si noti che ogni parola nel titolo "
+"che comincia per &quot;@&quot; sarà interpretata come un'etichetta!\n"
+"\n"
+"due:data\n"
+"defer:data\n"
+"\n"
+"Con questa sintassi è possibile inserire una data di scadenza o una data di "
+"rinvio. Le date sono formattate come aaaa-mm-gg (per esempio, 2012-04-15), "
+"aaaammgg (20120415), mmgg (0415, l'anno è quello corrente), oggi, domani o "
+"il nome di un giorno della settimana (due:monday significa scadenza il "
+"prossimo lunedì). Le date aggiunte in questo modo non compaiono nel titolo "
+"dell'attività.\n"
+"\n"
+"Esempi:\n"
+"\n"
+"Comprare materiale tags:acquisti,ufficio due:20120330 defer:tuesday\n"
+"\n"
+"L'esempio precedente indica a GTG di creare una nuova attività dal titolo "
+"&quot;Comprare materiale&quot;, avente le etichette &quot;acquisti&quot; e "
+"&quot;ufficio&quot;, con data di scadenza il 30 marzo 2012 e data di inizio "
+"il prossimo martedì.\n"
+"\n"
+"Telefonare mamma tags:famiglia,telefonate due:sunday defer:tomorrow\n"
+"\n"
+"L'esempio precedente indica a GTG di creare una nuova attività dal titolo "
+"&quot;Telefonare mamma&quot;, avente le etichette &quot;famiglia&quot; e "
+"&quot;telefonate&quot;, con data di scadenza la prossima domenica e data di "
+"inizio domani."
 
 #: GTG/core/firstrun_tasks.py:287
 msgid "Learn How To Use Synchronization Services"
@@ -744,6 +849,31 @@ msgid ""
 "you can read the documentation available in GTG's help (press F1 or use the "
 "Help menu to get access to it)."
 msgstr ""
+"Per aiutare nella ricerca di una specifica attività, GTG permette di cercare "
+"le attività in base al loro contenuto.\n"
+"\n"
+"Cercare delle attività è davvero facile: è sufficiente digitare le parole "
+"che si stanno cercando nella barra Inserimento veloce e selezionare la "
+"funzione &quot;Cerca&quot; nel menu che apparirà automaticamente.\n"
+"\n"
+"GTG conserva le richerche nella barra laterale nella sezione "
+"&quot;Cerca&quot;. E' quindi possibile ritornare ad una precedente ricerca, "
+"se necessario. I risultati sono aggiornati automaticamente, quindi è sempre "
+"possibile ottenere tutte le attività corrispondente ai criteri di ricerca.\n"
+"\n"
+"GTG salva le ricerche effettuate fintanto che non si procede alla loro "
+"cancellazione (che avviene cliccando con il tasto destro su di esse e "
+"selezionando &quot;Cancella&quot;). In questo modo è possibile chiudere GTG "
+"senza perdere traccia delle ricerche evvettuate. Questo è molto utile se si "
+"ricercano con frequenza specifiche attività!\n"
+"\n"
+"La funzione di ricerca di GTG è davvero potente e contempla molti parametri "
+"per agevolare la ricerca di specifiche attività. Per esempio, usando "
+"l'istruzione di ricerca &quot;@incarichi !oggi&quot;, è possibile ricercare "
+"le attività aventi l'etichetta @incarichi in scadenza oggi. Per maggiori "
+"informazioni sulle istruzioni di ricerca, è possibile leggere la "
+"documentazione disponibile nell'aiuto in linea di GTG (premendo F1 o "
+"utilizzando il menu Aiuto)."
 
 #: GTG/core/search.py:87
 msgid "not"
