--- a/po/ur.po
+++ b/po/ur.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-09-11 10:37+0200\n"
-"PO-Revision-Date: 2012-11-30 05:00+0000\n"
+"PO-Revision-Date: 2012-12-01 10:40+0000\n"
 "Last-Translator: Abdul Rauf <abdulraufhaseeb@gmail.com>\n"
 "Language-Team: Urdu <ur@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2012-12-01 05:16+0000\n"
+"X-Launchpad-Export-Date: 2012-12-02 04:39+0000\n"
 "X-Generator: Launchpad (build 16319)\n"
 
 #: GTG/plugins/export/export_templates/description_pocketmod.py:18
@@ -81,6 +81,7 @@ msgstr ""
 #: GTG/plugins/export/export.py:120
 msgid "No task matches your criteria. Empty report can't be generated."
 msgstr ""
+"کوئی بھی کام آپ کے معیار سے میل کھاتا ہے.خالی رپورٹ نہیں کیا جا سکتا ہے."
 
 #: GTG/plugins/export/export.py:138
 #, python-format
@@ -89,35 +90,35 @@ msgstr ""
 
 #: GTG/plugins/export/export.py:184
 msgid "Export the tasks currently listed"
-msgstr ""
+msgstr "فی الحال درج کاموں برآمد"
 
 #: GTG/plugins/export/export.py:322
 msgid "Choose where to save your list"
-msgstr ""
+msgstr "جہاں آپ کی فہرست کو بچانے کے لئے منتخب کریں"
 
 #: GTG/plugins/geolocalized_tasks/geolocalized.glade.h:1
 msgid "Set the task's location"
-msgstr ""
+msgstr "کام مقام مقرر کریں"
 
 #: GTG/plugins/geolocalized_tasks/geolocalized.glade.h:2
 msgid "Associate with new tag"
-msgstr ""
+msgstr "نیا ٹیگ کے ساتھ مربوط کریں"
 
 #: GTG/plugins/geolocalized_tasks/geolocalized.glade.h:3
 msgid "Associate with existing tag"
-msgstr ""
+msgstr "موجودہ ٹیگ کے ساتھ مربوط کریں"
 
 #: GTG/plugins/geolocalized_tasks/geolocalized.glade.h:4
 msgid "Geolocalized-tasks Preferences"
-msgstr ""
+msgstr "جیو مقامی کاموں کی ترجیحات"
 
 #: GTG/plugins/geolocalized_tasks/geolocalized.glade.h:5
 msgid "Use network"
-msgstr ""
+msgstr "نیٹ ورک کا استعمال کریں"
 
 #: GTG/plugins/geolocalized_tasks/geolocalized.glade.h:6
 msgid "Use cellphone"
-msgstr ""
+msgstr "سیل فون کا استعمال"
 
 #: GTG/plugins/geolocalized_tasks/geolocalized.glade.h:7
 msgid "Use gps"
