Launchpad automatic translations update.

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -7,15 +7,15 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-11 10:37+0200\n"
-"PO-Revision-Date: 2012-12-02 23:15+0000\n"
+"PO-Revision-Date: 2012-12-03 12:14+0000\n"
 "Last-Translator: Davi da Silva Böger <Unknown>\n"
 "Language-Team: Brazilian Portuguese <gnome-pt_br-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Launchpad-Export-Date: 2012-12-03 04:36+0000\n"
-"X-Generator: Launchpad (build 16319)\n"
+"X-Launchpad-Export-Date: 2012-12-04 05:55+0000\n"
+"X-Generator: Launchpad (build 16335)\n"
 "Language: pt_BR\n"
 
 #: GTG/plugins/export/export_templates/description_pocketmod.py:18
@@ -391,7 +391,7 @@ msgstr ""
 "\n"
 "No GTG, assim que você terminou uma tarefa, você pode encerrá-la, ou "
 "pressionando o botão &quot;Marcar como concluída&quot;, ou pressionando o "
-"botão &quot;Dispensar&quot;. Use o primeiro se a tarefa está concluída e o "
+"botão &quot;Descartar&quot;. Use o primeiro se a tarefa está concluída e o "
 "último se você deseja encerrar a tarefa porque ela não é mais relevante. Que "
 "tentar? Por exemplo, tente encerrar a subtarefa acima.\n"
 "\n"
@@ -400,7 +400,7 @@ msgstr ""
 "concluiu uma tarefa, então você não precisa mais fazer suas subtarefas "
 "(afinal, elas eram prerrequisitos).\n"
 "\n"
-"Note que as tarefas que você marcou como concluídas ou dispensou são "
+"Note que as tarefas que você marcou como concluídas ou descartou são "
 "listadas no &quot;Painel de Tarefas Encerradas&quot;, que está oculto por "
 "padrão, mas que pode ser facilmente mostrado usando o menu Ver.\n"
 "\n"
@@ -1779,7 +1779,7 @@ msgstr "Barra de ferramen_tas"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:14
 msgid "_Quick Add Entry"
-msgstr "Adicionar entrada _rápida"
+msgstr "Campo de adição _rápida"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:15
 msgid "_Plugins"
