Launchpad automatic translations update.

--- a/po/ru.po
+++ b/po/ru.po
@@ -8,16 +8,16 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-09-11 10:37+0200\n"
-"PO-Revision-Date: 2012-11-17 16:54+0000\n"
-"Last-Translator: DmDr <cardioexp@gmail.com>\n"
+"PO-Revision-Date: 2012-12-05 04:38+0000\n"
+"Last-Translator: Vadim Barsukov <Unknown>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2012-11-18 04:38+0000\n"
-"X-Generator: Launchpad (build 16278)\n"
+"X-Launchpad-Export-Date: 2012-12-05 05:32+0000\n"
+"X-Generator: Launchpad (build 16335)\n"
 
 #: GTG/plugins/export/export_templates/description_pocketmod.py:18
 msgid "Foldable booklet (PDF)"
@@ -225,7 +225,7 @@ msgid ""
 "%s"
 msgstr ""
 "\n"
-"Описание задачи\n"
+"Описание задачи:\n"
 "%s"
 
 #: GTG/plugins/send_email/sendEmail.py:75
@@ -235,11 +235,11 @@ msgstr "Задача: %(task_title)s"
 
 #: GTG/core/plugins/__init__.py:33
 msgid "Everything necessary to run this plugin is available."
-msgstr "Всё необходимое для запуска этого расширения имеется."
+msgstr "Есть всё для запуска этого расширения."
 
 #: GTG/core/plugins/__init__.py:34
 msgid "The plugin can not be loaded"
-msgstr "Расширение не возможно загрузить"
+msgstr "Расширение нельзя загрузить"
 
 #: GTG/core/plugins/__init__.py:35
 msgid "Some python modules are missing"
@@ -247,7 +247,7 @@ msgstr "Отсутствуют нужные модули python"
 
 #: GTG/core/plugins/__init__.py:36
 msgid "Please install the following python modules:"
-msgstr "Пожалуйста, установите модули python:"
+msgstr "Пожалуйста, установите эти модули python:"
 
 #: GTG/core/plugins/__init__.py:38
 msgid "Some remote dbus objects are missing."
@@ -355,24 +355,24 @@ msgstr ""
 "&quot;Задача&quot;. Всё: от строительства моста через Тихий Океан до замены "
 "лампочки или организации вечеринки!\n"
 "\n"
-"Если Вы новичок в GTG, уделите пару минут на чтение этих советов как "
+"Если Вы новичок в GTG, уделите пару минут на чтение этих советов о том, как "
 "наиболее эффективно использовать GTG, чтобы организовать Вашу жизнь.\n"
 "\n"
 "Ввод и редактирование задач:\n"
 "\n"
 "Чтобы поставить себе новую задачу, просто щелкните по кнопке &quot;Новая "
-"задача&quot; и просто опишите Вашу новую задачу. Возможно, стоит сделать "
-"какие-то дополнительные заметки. И это всё: задача создана! Как только "
-"задача будет выполнена, щелкните по кнопке &quot;Пометить Выполнена&quot;.\n"
+"задача&quot; и опишите Вашу новую задачу. Возможно, стоит сделать какие-то "
+"дополнительные заметки. И это всё: задача создана! Как только задача будет "
+"выполнена, щелкните по кнопке &quot;Пометить как выполненное&quot;.\n"
 "\n"
 "В GTG задача автоматически сохраняется по мере ее редактирования. Не нужно "
-"нажимать кнопку &quot;Сохранить&quot;!  Попробуйте: напишите что0нибудь "
-"прямо тут, закройте окно, откройте опять: Вы увидите все изменения!\n"
+"нажимать кнопку &quot;Сохранить&quot;!  Попробуйте: напишите что-нибудь "
+"прямо тут, закройте окно и откройте его опять: Вы увидите все изменения!\n"
 "\n"
 "Подзадачи:\n"
 "\n"
 "В реальности, чтобы сделать что-то, приходится идти к цели маленькими "
-"шажками, решая маленькие задачи. GTG помогает и в этом, просто создавайте "
+"шажками, решая оперативные задачи. GTG помогает и в этом, просто создавайте "
 "&quot;подзадачи&quot;. В GTG установлено правило: все подзадачи должны быть "
 "выполнены перед тем, как можно будет отметить выполненной родительскую "
 "задачу.\n"
@@ -386,14 +386,14 @@ msgstr ""
 "Закрытие задач:\n"
 "\n"
 "В GTG, закончив работу с задачей, Вы можете закрыть ее как кнопкой "
-"&quot;Отметить Выполнено&quot; так и кнопкой &quot;Отменить&quot; button. "
+"&quot;Отметить как выполненное&quot; так и кнопкой &quot;Отменить&quot;. "
 "Первая нужна, чтобы отметить завершенные задачи, а вторая - для отметки "
 "задач, которые потеряли актуальность. Почему бы не попробовать? Например, "
 "выполнить эту задачу.\n"
 "\n"
 "Кода Вы закрываете задачу, Вы получите предупреждение, что будут закрыты все "
 "подзадачи! В самом деле: GTG предполагает, что если завершена задача в "
-"целом, то нет никакой необходимости что-то делать ее подзадачами.\n"
+"целом, то нет никакой необходимости что-то делать с ее подзадачами.\n"
 "\n"
 "Список выполненных и отмененных задач можно вывести на экран. &quot;Панель "
 "закрытых задач&quot; по умолчанию выключена, но может быть включена в меню "
@@ -568,18 +568,18 @@ msgid ""
 "better not to edit your task while using the Work View."
 msgstr ""
 "Если нажать кнопку  &quot;Рабочий план&quot; то в списке задач останутся "
-"только &quot;выполнимые&quot; задачи.\n"
+"только задачи &quot;для исполнения&quot;.\n"
 "\n"
-"Что такое выполнимые задачи? Это те задачи, которые можно выполнить прямо "
-"сейчас.\n"
+"Что такое задачи для исполнения? Это те задачи, которые можно выполнить "
+"прямо сейчас.\n"
 "\n"
 "Это те задачи, у которых уже наступила дата начала выполнения.\n"
 "\n"
 "Это те задачи, у которых нет незакрытых подзадач, то есть можно выполнять "
 "саму задачу.\n"
 "\n"
-"Это те задачи, срок выполнения которых точен, а не задан &quot;Когда-ни-"
-"будь&quot;, эта дата завершения зарезервирована для тех вещей, которые "
+"Это те задачи, срок выполнения которых точен, а не задан &quot;Когда-"
+"нибудь&quot;, эта дата завершения зарезервирована для тех вещей, которые "
 "сначала стоит обдумать, а потом делать.\n"
 "\n"
 "Вкратце: Рабочий план отражает только те задачи, которыми можно заниматься "
@@ -589,13 +589,13 @@ msgstr ""
 "При использовании меток, можно отменить показ в рабочем плане задач, имеющих "
 "какую-то метку. Это делается из контекстного меню метки. Например, можно "
 "создать метку &quot;@ждем&quot; для задач, которые временно заблокированы "
-"ожиданием какого-то внешнего события (скажем, телефонного звонки или чего-то "
+"ожиданием какого-то внешнего события (скажем, телефонного звонка или чего-то "
 "еще).\n"
 "\n"
 "В завершение одно важное замечание относительно рабочего плана. Поскольку "
 "рабочий план изменяется немедленно, в процессе редактирования задачи, может "
 "произойти так, что задача исчезнет из рабочего плана из-за только что "
-"сделанных изменений (например, добавления подздачи или метки, скрывающей "
+"сделанных изменений (например, добавления подзадачи или метки, скрывающей "
 "задачу из рабочего плана). Чтобы такого не произошло, лучше не начинать "
 "редактировать задачи, открывая их из рабочего плана."
 
@@ -618,10 +618,10 @@ msgstr ""
 "В GTG предусмотрено подключение расширений, они дают дополнительные "
 "возможности.\n"
 "\n"
-"Например, иконка в области уведомлений со ссылкой на GTG, является одним из "
-"расширений. Автоматически удаляет закрытые задачи также расширение.\n"
+"Например, иконка в области уведомлений со ссылкой на GTG является одним из "
+"расширений. Другое расширение автоматически удаляет выполненные задачи.\n"
 "\n"
-"Менеджер расширений вызывается из меню Правка - Дополнения."
+"Менеджер расширений вызывается из меню Правка, пункт Расширения."
 
 #: GTG/core/firstrun_tasks.py:224
 msgid "Reporting Bugs"
