--- a/po/es.po
+++ b/po/es.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-09-11 10:37+0200\n"
-"PO-Revision-Date: 2012-11-27 16:22+0000\n"
+"PO-Revision-Date: 2012-12-08 22:05+0000\n"
 "Last-Translator: Christopher <Unknown>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2012-11-28 04:42+0000\n"
-"X-Generator: Launchpad (build 16309)\n"
+"X-Launchpad-Export-Date: 2012-12-09 04:46+0000\n"
+"X-Generator: Launchpad (build 16341)\n"
 
 #: GTG/plugins/export/export_templates/description_pocketmod.py:18
 msgid "Foldable booklet (PDF)"
@@ -779,6 +779,12 @@ msgid ""
 "Note: This product uses the Remember The Milk API but is not endorsed or "
 "certified by Remember The Milk"
 msgstr ""
+"Este servicio sincroniza sus tareas con el servicio en linea "
+"RememberTheMilk:\n"
+"\t\thttp://rememberthemilk.com\n"
+"\n"
+"Nota: este producto utiliza la API de Remember The Milk pero no está "
+"aprobado ni certificado por Remember The Milk"
 
 #: GTG/backends/backend_localfile.py:61
 msgid "Local File"
@@ -786,7 +792,7 @@ msgstr "Archivo local"
 
 #: GTG/backends/backend_localfile.py:66
 msgid "Your tasks are saved in a text file (XML format). "
-msgstr ""
+msgstr "Sus tareas se guardarán en un archivo de texto (formato XML). "
 
 #: GTG/backends/backend_twitter.py:54
 msgid "Twitter"
@@ -1599,6 +1605,7 @@ msgid ""
 "GTG is a personal tasks and TODO-list items organizer for the GNOME desktop "
 "environment."
 msgstr ""
+"GTG es un organizador personal de tareas para el entorno de escritorio GNOME"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:34
 msgid "GTG website"
@@ -1700,7 +1707,7 @@ msgstr ""
 
 #: GTG/info.py:34
 msgid "GTG is a personal tasks and TODO-list items organizer for the GNOME."
-msgstr ""
+msgstr "GTG es un organizador personal de tareas para GNOME"
 
 #~ msgid "Keep as Note"
 #~ msgstr "Mantener como nota"
