--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -7,15 +7,15 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-11 10:37+0200\n"
-"PO-Revision-Date: 2012-12-03 12:14+0000\n"
+"PO-Revision-Date: 2012-12-09 15:14+0000\n"
 "Last-Translator: Davi da Silva Böger <Unknown>\n"
 "Language-Team: Brazilian Portuguese <gnome-pt_br-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Launchpad-Export-Date: 2012-12-04 05:55+0000\n"
-"X-Generator: Launchpad (build 16335)\n"
+"X-Launchpad-Export-Date: 2012-12-10 04:40+0000\n"
+"X-Generator: Launchpad (build 16341)\n"
 "Language: pt_BR\n"
 
 #: GTG/plugins/export/export_templates/description_pocketmod.py:18
@@ -720,6 +720,52 @@ msgid ""
 "mum&quot;, under the tags &quot;family&quot; and &quot;calls&quot;, with the "
 "due date next Sunday and the start date tomorrow."
 msgstr ""
+"O Campo de Adição Rápida é o jeito mais fácil para criar novas tarefas. Use "
+"a caixa de seleção no menu Ver para habilitar ou desabilitar o campo.\n"
+"\n"
+"Para adicionar uma tarefa, simplesmente digite o título no campo de texto e "
+"pressione Enter. A tarefa será criada e selecionada no navegador de tarefas. "
+"Se um marcador estiver selecionado na barra lateral, o mesmo será aplicado à "
+"tarefa que você criou.\n"
+"\n"
+"You can also create a task in the Quick Add Entry and at the same time "
+"specify its tags, due and defer date. Follow these format rules:\n"
+"\n"
+"Você também pode criar uma tarefa no Campo de Adição Rápida e ao mesmo tempo "
+"especificar os marcadores, data de início e data de vencimento. Siga o "
+"seguinte formato:\n"
+"\n"
+"tags:tag1,tag2,tag3\n"
+"\n"
+"Usando isso você pode aplicar quantos marcadores desejar separando-os por "
+"vírgula. Note que qualquer palavra no título que comece com &quot;@&quot; "
+"também será interpretada como um marcador!\n"
+"\n"
+"due:data\n"
+"defer:data\n"
+"\n"
+"Usando isso você pode aplicar uma data de vencimento e uma data de início. "
+"Datas são formatadas como aaaa-mm-dd (por exemplo, 2012-04-01), ou aaaammdd "
+"(20120401), ou mmdd (0401, nesse caso usa-se o ano atual implicitamente) ou "
+"today, tomorrow ou o nome de um dia da semana (due:monday significa que o "
+"vencimento é na próxima segunda-feira). Datas que são adicionadas dessa "
+"forma não aparecem no título da tarefa.\n"
+"\n"
+"Exemplos:\n"
+"\n"
+"comprar estacionária tags:compras,escritório due:20120330 defer:tuesday\n"
+"\n"
+"O exemplo acima diz para o GTG criar uma tarefa com o título &quot;comprar "
+"estacionária&quot;, dentro dos marcadores &quot;compras&quot; e "
+"&quot;escritório&quot;, com data de vencimento de 30 de março de 2012 e data "
+"de início na próxima terça-feira.\n"
+"\n"
+"ligar para mãe tags:família,telefonemas due:sunday defer:tomorrow\n"
+"\n"
+"O exemplo acima diz para o GTG criar uma tarefa com título &quot;ligar para "
+"mãe&quot;, dentro dos marcadores &quot;família&quot; e "
+"&quot;telefonemas&quot;, com data de vencimento no próximo domingo e data de "
+"início amanhã."
 
 #: GTG/core/firstrun_tasks.py:287
 msgid "Learn How To Use Synchronization Services"
@@ -1864,6 +1910,19 @@ msgid ""
 "Getting Things GNOME!; if not, write to the Free Software Foundation, Inc., "
 "51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA."
 msgstr ""
+"Getting Things GNOME! é software livre; você pode redistribuí-lo e/ou "
+"modificá-lo sob os termos da GNU General Public License conforme publicada "
+"pela Free Software Foundation; quer a versão 2 da licença, ou (conforme você "
+"escolha) qualquer versão posterior.\n"
+"\n"
+"Getting Things GNOME! é distribuído com a esperança de que seja útil, mas "
+"SEM QUALQUER GARANTIA; mesmo sem a garantia implícita de MERCANTIBILIDADE OU "
+"ADEQUAÇÃO A UM DETERMINADO PROPÓSITO. Para mais detalhes, veja a GNU General "
+"Public License.\n"
+"\n"
+"Você deve ter recebido uma cópia da GNU General Public License juntamente "
+"com este programa; caso contrário, escreva para a Free Software Foundation, "
+"Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA."
 
 #: GTG/gtk/browser/taskbrowser.glade.h:40
 msgid "Mark as Not Done"
