--- a/po/es.po
+++ b/po/es.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-09-11 10:37+0200\n"
-"PO-Revision-Date: 2012-12-20 18:14+0000\n"
+"PO-Revision-Date: 2012-12-30 22:05+0000\n"
 "Last-Translator: Adolfo Jayme Barrientos <fitoschido@gmail.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2012-12-21 04:51+0000\n"
+"X-Launchpad-Export-Date: 2012-12-31 04:41+0000\n"
 "X-Generator: Launchpad (build 16378)\n"
 
 #: GTG/plugins/export/export_templates/description_pocketmod.py:18
@@ -848,11 +848,11 @@ msgstr ""
 
 #: GTG/backends/backend_mantis.py:224
 msgid "Iss."
-msgstr ""
+msgstr "Inc."
 
 #: GTG/backends/backend_mantis.py:245
 msgid "Link to issue: "
-msgstr ""
+msgstr "Enlazar con la incidencia: "
 
 #: GTG/gtg.py:84
 msgid "gtg is already running!"
@@ -937,7 +937,7 @@ msgstr "_Detalles"
 
 #: GTG/gtk/crashhandler.py:227
 msgid "_Report this problem..."
-msgstr "Info_rmar de este problema..."
+msgstr "Info_rmar de este problema…"
 
 #: GTG/gtk/crashhandler.py:231
 msgid "_Ignore the error"
@@ -1083,8 +1083,8 @@ msgstr[1] ""
 #: GTG/gtk/delete_dialog.py:94
 msgid "Are you sure you want to delete this task?"
 msgid_plural "Are you sure you want to delete these tasks?"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "¿Está seguro de que quiere eliminar esta tarea?"
+msgstr[1] "¿Está seguro de que quiere eliminar estas tareas?"
 
 #: GTG/gtk/delete_dialog.py:100
 msgid "Keep selected task"
@@ -1350,7 +1350,7 @@ msgstr "Mostrar etiqueta en la vista de trabajo"
 
 #: GTG/gtk/browser/__init__.py:51
 msgid "You can create, open or filter your tasks here"
-msgstr ""
+msgstr "Aquí puede crear, abrir o filtrar sus tareas"
 
 #: GTG/gtk/browser/__init__.py:52
 msgid "Clear"
